force-app/main/default/objects/JCFS__AutoSyncJob__c/JCFS__AutoSyncJob__c.object-meta.xml
<CustomObject>
    <label>AutoSyncJob (Beta)</label>
    <nameField>
        <label>Job ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoSyncJobs (Beta)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>