force-app/main/default/objects/JCFS__AutoSyncJob__c/fields/JCFS__firstTry__c.field-meta.xml
<CustomField>
    <fullName>JCFS__firstTry__c</fullName>
    <label>First Try</label>
    <type>DateTime</type>
</CustomField>