force-app/main/default/objects/JCFS__AutoSyncJob__c/fields/JCFS__jobData__c.field-meta.xml
<CustomField>
    <fullName>JCFS__jobData__c</fullName>
    <label>Job Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>