force-app/main/default/objects/JCFS__AutoSyncJob__c/fields/JCFS__lastTry__c.field-meta.xml
<CustomField>
    <fullName>JCFS__lastTry__c</fullName>
    <label>Last Try</label>
    <type>DateTime</type>
</CustomField>