force-app/main/default/objects/JCFS__AutoSyncJob__c/fields/JCFS__nextTry__c.field-meta.xml
<CustomField>
    <fullName>JCFS__nextTry__c</fullName>
    <label>Next Try</label>
    <type>DateTime</type>
</CustomField>