force-app/main/default/objects/JCFS__AutoSyncJob__c/fields/JCFS__serializedJob__c.field-meta.xml
<CustomField>
    <fullName>JCFS__serializedJob__c</fullName>
    <label>Serialized Job</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>